--- a/Energiebilanz_Berechner/Energiebilanz_Berechner/mylist/templates/lueftung_angaben.html
+++ b/Energiebilanz_Berechner/Energiebilanz_Berechner/mylist/templates/lueftung_angaben.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Schritt 1 – Allgemeine Angaben</h1>
-  <form method="post" action="{% url 'wizard_allg' %}">
+  <h1>Schritt 5 – Lüftung</h1>
+  <form method="post" action="{% url 'wizard_lueftung' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Weiter</button>
